Save/Update files

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -232,7 +232,7 @@
  obj_unify_culture_desc:0 "あなたの文化グループに属するすべての州を保有する。"
  num_converted_religion:0 "州の改宗"
  num_objectives_fullfilled:0 "目的の達成"
- obj_religious_league_war_on_winning_side_tooltip:1 "We were on the winning side in the Religious League War"
+ obj_religious_league_war_on_winning_side_tooltip:1 "宗教連盟戦争で勝者となる。"
  obj_3_trade_companies:0 "3つの交易会社"
  obj_3_trade_companies_desc:0 "交易会社を3社以上設立する。"
  obj_universities:0 "複数の大学"
@@ -379,7 +379,7 @@
  BANNER_TOO_HIGH_CORRUPTION:0 "この八旗軍を編成すると汚職が$VAL|R$となり、100を超えます。"
  RAISE_MANCHU_BANNERS:0 "八旗軍を編成"
  BANNER_TXT:0 "$CURR|Y$/$ALLOW|Y$"
- BANNERS_FROM_TT:3 "§YBanners Forcelimit§!\nThis is the amount of current and possible banners our nation can have.\nBanners cost Corruption to raise and have higher Discipline than normal troops.\n\nBanners are raised from the state's full core provinces with Manchu culture.\n\n$NAME$ provide $AMOUNT|Y$ Force Limit of Banners due to the development in:\n"
+ BANNERS_FROM_TT:3 "§Y八旗軍の扶養限界§!\nこの数値は我が国が現在保有する八旗軍の数と編制可能な扶養限界になります。\n八旗軍は編成時に汚職を高めますが、通常の軍隊より高い規律を持ちます。\n\n八旗軍は満州文化を持つ完全な中核州のみから編成可能です。\n\n$NAME$は以下の州の開発度により、$AMOUNT|Y$の八旗軍扶養限界を獲得します：\n"
  STATE_CORRUPTION_INC:1 "$RAISED|Y$の連隊を八旗軍として編成すると汚職が$INC$上昇します。\n"
  STATE_EDICT_NOT_REMOVE:0 "$ACTIVE|Y$は$WHEN|Y$まで変更又は削除することはできません。"
  CLICK_TO_REMOVE_EDICT:0 "この布告を廃止します。"
