--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -49,7 +49,7 @@
  PC_NOT_FAST_ENOUGH:0 "お使いのコンピューターはこのゲームの速度で実行するのに十分な速さを満たしていないため、さらに遅い速度であっても違いに気づくことは無いでしょう。"
  AUTONOMY_TOO_HIGH:0 "州の自治率が§Y$MAX$%§!を超えている場合、手動で自治率を増加させることはできません。"
  AUTONOMY_TOO_LOW:0 "州の自治率が§Y$MAX$%§!未満の場合、手動で自治率を減少させることはできません。"
- AUTO_DUE_TO_GOV:0 "$WHAT|Y$."
+ AUTO_DUE_TO_GOV:0 "$WHAT|Y$。"
  AUTO_DUE_TO_COLONIAL_CORE:0 "テリトリーの中核州は§Y$VAL$%§!よりも低い自治率を持つことはできません。"
  AUTO_DUE_TO_COLONY:0 "植民地の自治率を§Y$VAL$%§!未満にすることはできません。"
  AUTO_DUE_TO_OVERSEAS:0 "海外の州の自治率を§Y$VAL$%§!未満にすることはできません。"
@@ -104,7 +104,7 @@
  HRE_LEAGUE_LEADER_NO_CHANGE_DURING_WAR:0 "この同盟の指導国は連盟戦争の間、変更できません。"
  HRE_LEAGUE_LEADER_WRONG_RELIGION:0 "§Y$RELIGION$§!の国家は連盟の指導国となることができません。"
  HRE_LEAGUE_LEADER_REGENCY:0 "摂政の期間中に連盟の指導国となることはできません。"
- HRE_LEAGUE_LEADER_SCORE:1 "To become the new leader of this league §Y$COUNTRY$§! would need a military score of more than §Y$SCORE_NEEDED$§! due to the current leader having a score of §Y$SCORE_LEADER$§!. The current military score for §Y$COUNTRY$§! is §Y$SCORE_CURRENT$§!. Maximum Manpower, Force Limit and Tactics determine the military score. Being at War reduces it dramatically, while being an Elector increases it significantly."
+ HRE_LEAGUE_LEADER_SCORE:1 "現在の連盟指導国の軍事評価が§Y$SCORE_LEADER$§!であるため、連盟の新たな指導国となるには§Y$COUNTRY$§!は§Y$SCORE_NEEDED$§!以上の軍事評価が必要です。現在の§Y$COUNTRY$§!の軍事評価は§Y$SCORE_CURRENT$§!です。軍事評価は最大人的資源、軍の扶養限界、戦術によって決まります。また戦争中は劇的に低下しする一方で、選帝侯であれば大幅に増加します。"
  HRE_LEAGUE_LEADER_SCORE_WAR:0 "§Y$COUNTRY$§!の軍事評価は彼らが戦争中であるため、低下します。"
  HRE_LEAGUE_LEADER_SCORE_ELECTOR:0 "§Y$COUNTRY$§!の軍事評価は彼らが選帝侯であるため、上昇します。"
  HRE_LEAGUE_LEADER_SCORE_ONLY:0 "§Y$COUNTRY$§!の現在の軍事評価は§Y$SCORE_CURRENT$§!です。"
@@ -164,7 +164,7 @@
  prices.2.d:0 "中国へのヨーロッパ交易商の大規模な派遣によって、中国の磁器の需要が急増している。中国の磁器はヨーロッパ全土で必要とされており、それに対し中国は金か銀でのみ支払いに応じている。"
  prices.2.a:0 "陶磁器の需要が増大するだろう。"
  JOHAN_FRIEDRICH_BOTTGER:0 "ヨーロッパでの磁器生産"
- prices.3.t:1 "Porcelain in Meissen"
+ prices.3.t:1 "マイセンの陶磁器"
  prices.3.d:1 "Our inventors have spent some time studying samples of porcelain that our traders have brought back from China. They claim to have discovered the secrets of its production. The samples that they have presented to [Root.Owner.Monarch.GetTitle] [Root.Owner.Monarch.GetName] are certainly very fine, and will bring in considerable wealth if they can be produced in large amounts. They now request our investment to set up a porcelain manufactory which will, they say, allow them to capture the German market for chinaware."
  prices.3.a:1 "Porcelain shall be our path to riches."
  PROTESTANT_DONT_EAT_FISH:0 "プロテスタントは魚を食べない"
