--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -7016,7 +7016,7 @@
  REVOLUTION_SPREAD_5:0 "$DESC$"
  REVOLUTION_SPREAD_6:0 "$HINT$"
  REVOLUTION_SPREAD_LOG:0 "Revolutionary ideas have spread to our provinces."
- REVOLUTION_SPREAD_BTN2:0 "Ok"
+ REVOLUTION_SPREAD_BTN2:0 "OK"
  REVOLUTION_SPREAD_BTN3:0 "Go to"
  REVOLUTION_SPREAD_ZEAL_TITLE:0 "Revolutionary Ideas Spread"
  REVOLUTION_SPREAD_ZEAL_SETUP:0 "When we spread revolutionary ideas to our ennemies."
@@ -7028,7 +7028,7 @@
  REVOLUTION_SPREAD_ZEAL_5:0 "$PROVINCES$"
  REVOLUTION_SPREAD_ZEAL_6:0 "We have have gained $ZEAL$ Revolutionary Zeal."
  REVOLUTION_SPREAD_ZEAL_LOG:0 "Revolutionary ideas have spread to ennemy' provinces."
- REVOLUTION_SPREAD_ZEAL_BTN2:0 "Ok"
+ REVOLUTION_SPREAD_ZEAL_BTN2:0 "OK"
  REVOLUTION_SPREAD_ZEAL_BTN3:0 "Go to"
  WEGAINDOFTIER_TITLE:0 "Rise to higher Defender of the Faith Tier"
  WEGAINDOFTIER_SETUP:0 "When we rise to a higher Defender of the Faith Tier."
