--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -1035,7 +1035,7 @@
  PROV_ADJ1045:0 "ヤクート"
  PROV_ADJ1046:0 "マヤ"
  PROV_ADJ1047:0 "ジュグジュル"
- PROV_ADJ1048:0 "ミョー・ガサン"
+ PROV_ADJ1048:0 "ミャオ・ガサン"
  PROV_ADJ1049:0 "ハイランバオ"
  PROV_ADJ1050:0 "デレン"
  PROV_ADJ1051:0 "アルダン"
