--- a/source/localisation/subject_type_l_english.yml
+++ b/source/localisation/subject_type_l_english.yml
@@ -18,7 +18,7 @@
  vassal_long_desc:0 "属国は宗主国の戦争に従う必要があり、外交を制限されています。また、宗主国に対して収入の一部を献上しなければなりません。"
  march_long_desc:0 "辺境伯は属国の一形態ですが、宗主国へ収入を献上せず、一般的な属国よりもより多くの軍事力を保有することができます。"
  client_vassal_long_desc:0 "衛星国は、一般的な属国のように宗主国の戦争に付き従う必要があり、外交を制限されています。また、宗主国に対して収入の一部を献上しなければいけません。"
- daimyo_vassal_long_desc:0 "A Daimyo subject must follow their overlord to war, cannot make certain diplomatic actions and will pay a fraction of his income to his overlord. Daimyo subjects can also fight each other."
+ daimyo_vassal_long_desc:0 "従属大名は将軍の戦争に付き従わなければなりません。外交の一部は行うことができず、収入の一部を献上しなければなりません。ただし、従属大名は他の大名と争うことができます。"
  client_march_long_desc:0 "衛星辺境伯は一般的な辺境伯のように宗主国へ収入を献上せず、一般的な属国よりもより多くの軍事力を保有することができます。"
  colony_long_desc:0 "植民地は宗主国の統治に従う植民国家です。植民地は宗主国に対し月々の関税を支払う必要があります。また一定量の交易力を供出しなければいけません。植民地は先住民国家もしくは他の植民地にのみ宣戦布告をすることができます。"
  protectorate_long_desc:0 "保護国は、宗主国によって守られており、交易力の半分を提供しています。"
@@ -63,6 +63,6 @@
  dummy_title_plural:0 "ダミー従属国"
  dummy_is_our:0 "§Y$NAME$§!は我が国のダミー従属国です。"
  dummy_long_desc:1 "ダミーは様々な目的で使用される実験台です。"
- DEFAULT_OVERLORD:0 "Overlord"
+ DEFAULT_OVERLORD:0 "宗主国"
  personal_union_overlord_title:0 "Senior Partner"
  colony_overlord_title:0 "Home Nation"
