--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -291,11 +291,11 @@
  INSTI_NOT_ACTIVE:0 "$NAME|Y$はまだ発見されていません。"
  INSTI_PRIMITIVE_CANNOT_EMBRACE_RELIGION:0 "原始国家は、制度を受容する前に宗教を変更しなければなりません。"
  INSTI_PRIMITIVE_CANNOT_EMBRACE_GOVERNMENT:0 "原始国家は、制度を受容する前に政府を変更しなければなりません。"
- INSTI_TOO_EXPENSIVE:1 "We cannot afford to embrace $NAME|Y$ as it would cost $COST|Y$¤ and we only have $CASH|Y$¤"
+ INSTI_TOO_EXPENSIVE:1 "我々が$NAME|Y$を受容するためには$COST|Y$¤のコストが必要ですが、我々は$CASH|Y$¤しか持っていないので、その余裕はありません。"
  INSTI_NOT_ENOUGH_HOLD:0 "$NAME|Y$の制度は、受容するのに十分なほど我が国に広まっていません。受容するには、自治率による補正後の総開発値の$NEED|Y$％以上が必要ですが、受容しているのは$CURR|Y$％だけです。"
  EMBRACE_INSTI_COST:0 "$NAME|Y$を受容するには$COST|Y$¤のコストがかかり、技術コストが$TECH$変更されます。"
  MANAGE_OVEREXTENSION:0 "過剰拡大を管理する"
- EMPEROR_DIPACTIONS_DESC:0 "\nThe Emperor may take the following diplomatic actions: \n$LIST|Y$"
+ EMPEROR_DIPACTIONS_DESC:0 "\n皇帝は次のような外交的行動をとることができます：\n$LIST|Y$"
  PAPAL_CONTROLLER_DIPACTIONS_DESC:0 "教皇の支配者は次のような外交的行動をとることができます：\n$LIST|Y$"
  PAPACY_NEXT_CARDINALS:0 "§Y枢機卿候補§W"
  UNIT_UNLOCKED_AT_TECH:0 "「$UNIT|Y$」は$TECH$（$LEVEL$）で解禁されます。"
