--- a/source/localisation/diplo_reasons_l_english.yml
+++ b/source/localisation/diplo_reasons_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- DIPLO_CANCELED_TRIBUTARY:1 "Abandoned Tributary: "
+ DIPLO_CANCELED_TRIBUTARY:1 "放棄された朝貢："
  DIPLO_NO_FIGHTING:0 "現在進行中の戦闘はない："
  DIPLO_UNCONDITIONALLY_SURRENDERED:1 "$WHO$は$THEM$に§Y無条件降伏§!した："
  DIPLO_SET_PROVINCES_AS_VITAL:0 "$THEM$は$WE$の州に重大な権益を有していると考えている："
