--- a/source/localisation/emperor_mercs_l_english.yml
+++ b/source/localisation/emperor_mercs_l_english.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
  MERC_COST_BASE:0 "From Composition: $VAL|Y$¤\n"
- MERC_COST_TYPE:0 "$NAME$: $VAL|-=%$\n"
+ MERC_COST_TYPE:0 "$NAME$：$VAL|-=%$\n"
  MERC_ORIGIN:0 "\nThis is the home of $NAME|Y$"
  MERC_IN_RANGE_FOR_US_TO_HIRE_IN:0 "\nThis is within our mercenary hiring range."
  MERC_NOT_IN_RANGE_FOR_US_TO_HIRE_IN:0 "\n§RThis is outside our mercenary hiring range.§!"
  DISBAND_MERC_DRO:1 " By disbanding a Mercenary Company they will not be available to be hired until they've recovered their manpower which will be $DATE|Y$."
- MACRO_HIRE_MERCENARY_COMPANY:0 "Mercenary Companies"
+ MACRO_HIRE_MERCENARY_COMPANY:0 "傭兵団"
  MACRO_HIRE_MERCENARY_COMPANY_INFO:0 "- You French fight for money, while we British fight for honor.\n-Sir, a man fights for what he lacks the most.\n  -- Robert Surcouf"
  MERCENARY_COMPANY_NOT_AVAILABLE_ANYMORE:0 "The selected mercenary company isn't available anymore."
  MERCENARY_COMPANY_ALREADY_HIRED:0 "$COMPANY|Y$ is already hired by us!"
@@ -16,13 +16,13 @@
  MERCENARY_COMPANY_TOO_FAR_PROVINCE:2 "$COMPANY|Y$ is §RNOT§! within range for us to hire in province $PROVINCE|Y$. $RANGE$"
  MERC_RANGE_EXPLAINED:0 "The distance from $ORIGIN|Y$ to $WHERE$ is $DISTANCE|Y$, and our range to hire mercenary is $RANGE|Y$. This range grows as our trade range grows."
  MERC_ENTRY_IN_RANGE:0 "\n$NAME|Y$ can be recruited here!"
- MERCENARY_COMPANY_ORIGIN:0 "Origin: $PROVINCE|Y$"
+ MERCENARY_COMPANY_ORIGIN:0 "発祥地：$PROVINCE|Y$"
  SELECT_LEADER_MERCENARY_COMPANY:0 "Foreign mercenary companies are lead by their own generals and cannot be assigned another."
  CANT_SPLIT_MERCENARY_COMPANY:0 "Mercenary companies cannot be split or merged with other units."
  CANT_REFILL_GARRISON_MERCENARY_COMPANY:0 "Mercenary companies cannot be used to refill our garrisons."
  MERCENARY_COMPANY_MANPOWER_INSTANT:1 "$COMPANY|Y$ has $MANPOWER|Y$ men in reserve and this grows with $GROWTH|Y$ each month. The company will reinforce its regiments with $REINFORCE|Y$ fresh troops this month."
  MERCENARY_COMPANY_MANPOWER_DELAYED:1 "Mercenary companies draw from their own manpower pool to reinforce. The amount of manpower available will grow very slowly while they are hired and recovers much faster while not on the field."
- MERCENARY_COMPANY_EFFECTS:0 "From the $COMPANY|Y$ traditions:\n"
+ MERCENARY_COMPANY_EFFECTS:0 "$COMPANY|Y$の伝統から：\n"
  REINFORCE_MERCENARY_COMPANY_EXTRA:0 " and $VALUE$ from the $COMPANY|Y$"
  MERC_COMP_MANPOWER_BASE:0 "The Maximum Manpower of $MP|Y$ ise due to $VAL|Y$ original regiments."
  MERC_COMP_MANPOWER_CHANGE:0 " Modified by $VAL|+=2%$ due to:\n$WHY$"
@@ -40,7 +40,7 @@
  MERCENARY_COMPANY_AVAILABLE_5:0 "They will gladly fight our battles for the right price as long as our merchants can reach them."
  MERCENARY_COMPANY_AVAILABLE_6:0 "$EXTRA$"
  MERCENARY_COMPANY_AVAILABLE_LOG:1 "The $COMPANY$ mercenary company is now available for employment."
- MERCENARY_COMPANY_AVAILABLE_BTN1:0 "Ok"
+ MERCENARY_COMPANY_AVAILABLE_BTN1:0 "OK"
  MERCENARY_COMPANY_UNAVAILABLE_TITLE:0 "Mercenary Company Unavailable"
  MERCENARY_COMPANY_UNAVAILABLE_SETUP:0 "When a mercenary company becomes unavailable."
  MERCENARY_COMPANY_UNAVAILABLE_HEADER:0 "$MESSENGER$"
@@ -50,7 +50,7 @@
  MERCENARY_COMPANY_UNAVAILABLE_4:0 "is not available anymore for our employment."
  MERCENARY_COMPANY_UNAVAILABLE_5:0 "Whatever it was that drove them to fight and die for gold seems to have left them."
  MERCENARY_COMPANY_UNAVAILABLE_LOG:1 "The $COMPANY$ mercenary company not available for employment anymore."
- MERCENARY_COMPANY_UNAVAILABLE_BTN1:0 "Ok"
+ MERCENARY_COMPANY_UNAVAILABLE_BTN1:0 "OK"
  MERCENARY_COMPANY_DISBANDED_TITLE:0 "Mercenary Company Disbanded"
  MERCENARY_COMPANY_DISBANDED_SETUP:0 "When a mercenary company is disbanded."
  MERCENARY_COMPANY_DISBANDED_HEADER:0 "$MESSENGER$"
@@ -61,7 +61,7 @@
  MERCENARY_COMPANY_DISBANDED_5:0 "We will no longer have to pay for their services and will have time to rebuild their numbers."
  MERCENARY_COMPANY_DISBANDED_6:0 "We should be able to hire them again on $AVAILABLE_DATE$."
  MERCENARY_COMPANY_DISBANDED_LOG:1 "The $COMPANY$ mercenary company has been disanded."
- MERCENARY_COMPANY_DISBANDED_BTN1:0 "Ok"
+ MERCENARY_COMPANY_DISBANDED_BTN1:0 "OK"
  MERCENARY_COMPANY_NEW_GENERAL_TITLE:0 "Mercenary Company Has New General"
  MERCENARY_COMPANY_NEW_GENERAL_SETUP:0 "When an unemployed mercenary company has a new general."
  MERCENARY_COMPANY_NEW_GENERAL_HEADER:0 "$MESSENGER$"
@@ -71,7 +71,7 @@
  MERCENARY_COMPANY_NEW_GENERAL_4:0 "will now be lead by $LEADER$."
  MERCENARY_COMPANY_NEW_GENERAL_5:0 "We might want to revise our plans to employ them depending on how good he is."
  MERCENARY_COMPANY_NEW_GENERAL_LOG:1 "The $COMPANY$ mercenary company has a new leader."
- MERCENARY_COMPANY_NEW_GENERAL_BTN1:0 "Ok"
+ MERCENARY_COMPANY_NEW_GENERAL_BTN1:0 "OK"
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_TITLE:0 "Employed Mercenary Company Has New General"
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_SETUP:0 "When an employed mercenary company has a new general."
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_HEADER:0 "$MESSENGER$"
@@ -82,7 +82,7 @@
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_5:0 "They are now lead by $LEADER$."
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_6:0 "May he prove competent at his job while in our service."
  MERCENARY_COMPANY_NEW_GENERAL_HIRED_LOG:1 "The $COMPANY$ mercenary company we employ has a new leader."
- MERCENARY_COMPANY_NEW_GENERAL_HIRED_BTN1:0 "Ok"
+ MERCENARY_COMPANY_NEW_GENERAL_HIRED_BTN1:0 "OK"
  HIRE_MERCENARY_COMPANY_INSTANT:0 "The $COMPANY|Y$ mercenary company is available for hire."
  ANY_EMPLOYED_MERCENARY_COMPANY_TRIGGER:0 "Any employed mercenary company"
  NOT_ANY_EMPLOYED_MERCENARY_COMPANY_TRIGGER:0 "No employed mercenary company"
@@ -93,8 +93,8 @@
  IS_NOT_FOREIGN_COMPANY_TRIGGER:0 "Is a local mercenary company"
  NUM_HIRED_MERCENARY_COMPANIES_GREATER_TRIGGER:0 "Is employing at least $NUM|Y$ mercenary companies"
  NOT_NUM_HIRED_MERCENARY_COMPANIES_GREATER_TRIGGER:0 "Is employing less than $NUM|Y$ mercenary companies"
- COMPANY_IS_TEMPLATE:0 "Is the $COMPANY|Y$."
- COMPANY_IS_NOT_TEMPLATE:0 "Is not the $COMPANY|Y$."
+ COMPANY_IS_TEMPLATE:0 "$COMPANY|Y$である。"
+ COMPANY_IS_NOT_TEMPLATE:0 "$COMPANY|Y$ではない。"
  KILL_MERCENARY_COMPANY_LEADER:0 "$NAME|Y$, leader of the $COMPANY|Y$, will die!"
  CONVERT_MERCENARY_COMPANY_LEADER:0 "$NAME|Y$ ($FIRE$/$SHOCK$/$MANUEVER$/$SIEGE$) leader of the $COMPANY|Y$, will become our own General!"
  COMPANY_HAS_MANPOWER:0 "Has $VAL|Y$% or more manpower reserves remaining."
@@ -104,12 +104,12 @@
  COMPANY_ADD_MANPOWER:1 "$COMPANY|Y$ will regain up to $VAL|Y$% of its reserve manpower."
  COMPANY_LOSE_MANPOWER:1 "$COMPANY|Y$ will lose up to $VAL|R$% of its reserve manpower."
  ONLY_MERCENARY_MODIFIER:0 "§YAffects only Mercenary Regiments§!"
- merc_swiss_guard:0 "Swiss Guard"
+ merc_swiss_guard:0 "スイス衛兵"
  merc_bande_nere:0 "Bande Nere"
  merc_schwarze_garde:0 "Schwarze Garde"
  merc_doppelsoeldner:0 "Doppelsöldner"
  merc_reislaufer:0 "Reisläufer"
- merc_hessian_jaegerkorps:0 "Hessian Jaegerkorps"
+ merc_hessian_jaegerkorps:0 "ヘッセン猟兵団"
  merc_routiers:0 "Routiers"
  merc_bascoli:0 "Bascoli"
  merc_levends:0 "Levends"
@@ -117,36 +117,36 @@
  merc_morlachs:0 "Morlachs"
  merc_guardia_corsa:0 "Guardia Corsa"
  merc_hadjuks:1 "Hajduks"
- merc_gallowglasses:0 "Gallowglasses"
+ merc_gallowglasses:0 "ギャローグラス"
  merc_redshanks:0 "Redshanks"
- merc_scottish_guard:0 "Scottish Guard"
+ merc_scottish_guard:0 "スコットランド衛兵"
  merc_sajkasi:0 "Sajkasi"
  merc_seimeni:0 "Seimeni"
  merc_armatoles:0 "Armatoles"
  merc_white_company:0 "White Company"
  merc_flemish_company:0 "Flemish Company"
- merc_huai_army:0 "Huai Army"
- merc_xiang_army:0 "Xiang Army"
+ merc_huai_army:0 "淮軍"
+ merc_xiang_army:0 "湘軍"
  merc_wolf_troops:0 "Wolf Troops"
  merc_shanxi_guard:0 "Shanxi Guard"
- merc_yongning_warriors:0 "Yongning Warriors"
- merc_kanto_ronin:0 "Kanto Ronin"
- merc_kyushu_wokou:0 "Kyushu Wokou"
- merc_shikoku_yojimbo:0 "Shikoku Yojimbo"
- merc_purbiyas:0 "Purbiyas"
+ merc_yongning_warriors:0 "永寧戦士団"
+ merc_kanto_ronin:0 "関東浪人"
+ merc_kyushu_wokou:0 "九州倭寇"
+ merc_shikoku_yojimbo:0 "四国用心棒"
+ merc_purbiyas:0 "プルビア"
  merc_gorkhalis:0 "Gorkhalis"
  merc_gosains:0 "Gosains"
  merc_banjara_company:0 "Banjara Company"
  merc_bukhara_band:0 "Bukhara Band"
- merc_mesopotamian_mamluks:0 "Mesopotamian Mamluks"
- merc_nile_mamluks:1 "Mamluks of the Nile"
- merc_delhi_mamluks:0 "Mamluks of Delhi"
+ merc_mesopotamian_mamluks:0 "メソポタミアのマムルーク"
+ merc_nile_mamluks:1 "ナイルのマムルーク"
+ merc_delhi_mamluks:0 "デリーのマムルーク"
  merc_zeybeks:0 "Zeybeks"
  merc_sekban:0 "Sekban"
  merc_zanj_company:0 "Zanj Company"
- merc_knights_templar:0 "Knights Templar"
- merc_black_army:0 "Black Army"
- merc_black_army_2:0 "Black Army Reserves"
+ merc_knights_templar:0 "テンプル騎士団"
+ merc_black_army:0 "黒軍"
+ merc_black_army_2:0 "黒軍予備隊"
  merc_lombard_free_company:0 "Lombard Free Company"
  merc_tuscan_free_company:0 "Tuscan Free Company"
  twenty_good_men:0 "Twenty Good Men"
@@ -159,8 +159,8 @@
  merc_sahel_company:0 "Sahel Company"
  merc_asafo_company:0 "Asafo Company"
  merc_nubian_company:0 "Nubian Company"
- merc_tonkinese_army:0 "Tonkinese Army"
- merc_mongol_mercenaries:0 "Mongol Mercenaries"
+ merc_tonkinese_army:0 "東京軍"
+ merc_mongol_mercenaries:0 "モンゴル傭兵"
  merc_royal_circassian_guards:0 "Circassian Guards"
  merc_bedouin_auxiliaries:0 "Bedouin Auxiliaries"
  merc_kurdish_company:0 "Kurdish Company"
@@ -177,26 +177,26 @@
  merc_kutai_company:0 "Kutai Company"
  merc_miquelet_company:0 "Free Miquelets"
  merc_free_company_of_volunteers:0 "Free Company of Volunteers"
- merc_crabats:0 "Crabats"
+ merc_crabats:0 "クラバット"
  merc_free_swiss_guard:0 "Free Swiss Guard"
  merc_colonial_rangers:0 "Colonial Rangers"
  merc_independent_cossack_host:0 "Independent Cossack Host"
  merc_kazakh_company:0 "Kazakh Company"
- merc_yaka_free_warriors:0 "Yaka Free Warriors"
- merc_great_lakes_free_warriors:0 "Great Lakes Free Warriors"
+ merc_yaka_free_warriors:0 "ヤカ自由戦士"
+ merc_great_lakes_free_warriors:0 "大湖沼自由戦士"
  merc_thai_company:0 "Thai Company"
  merc_yucatan_company:0 "Yucatan Company"
  merc_misquito_coast_company:0 "Misquito Coast Company"
  merc_navajo_raiders:0 "Navajo Raiders"
  merc_chonnonton_warriors:0 "Chonnonton Free Warriors"
- merc_free_mohawks:0 "Mohawk Free Warriors"
- merc_muscogee_mercenaries:0 "Muscogee Mercenaries"
+ merc_free_mohawks:0 "モホーク自由戦士"
+ merc_muscogee_mercenaries:0 "マスコギー傭兵"
  merc_quito_company:0 "Quito Company"
  merc_silver_company:0 "Silver Company"
- merc_dahomey_amazons:0 "Dahomey Amazons"
+ merc_dahomey_amazons:0 "ダホメ・アマゾンズ"
  merc_gascon_musket_company:0 "Gascon Musket Company"
  merc_tyrolean_guard:0 "Tyrolean Guard"
- merc_mongol_banner:0 "Mongol Banner"
+ merc_mongol_banner:0 "モンゴル八旗"
  merc_swiss_canton_mercenaries:0 "Swiss Home Guard"
  merc_tamil_company:0 "Tamil Company"
  merc_company_of_the_ganges:0 "Company of the Ganges"
