--- a/source/localisation/third_rome_l_english.yml
+++ b/source/localisation/third_rome_l_english.yml
@@ -36,7 +36,7 @@
  siberian_events.2.d:0 "荒漠とした領域ではあるものの、川を渡ることができるため、シベリアは無人の土地というわけではない。多くの地元の部族と酋長が住んでいるのだ。彼らの一部は毛皮を売る方が良いと考え、また別の者は我々の保護と引き換えに同じ産品を税として納めるよう説き伏せられた。\n$YEAR$は住民にとっては非常にたくさんの生産物が獲れたか、それとも徴税官はめったにないほど効果的に貢納を集めることが出来たか、どちらにしてもヤサークは今年期待していたよりもずっと多い産物を持ってきた。"
  siberian_events.2.a:0 "素晴らしい。"
  siberian_events.3.t:0 "プロムィーシリェンニキ"
- siberian_events.3.d:0 "The abundance of fur-clad animals in Siberia is a veritable treasure trove, not only for our country, but also for many of our poor serfs and townspeople. It has become increasingly common for adventurous men to form fur-hunting or trading expeditions, travelling far beyond our most distant settlements. When they return they bring precious sable and squirrel furs, worth a fortune back in [russian_center_of_trade.GetName].\nAt times, however, it seems some of them are willing to go very far in their pursuit of wealth. The cut-throat conduct of our 'traders' has enraged the tribal population in [siberian_frontier_province.GetName] and is causing a risk to the local settlement there."
+ siberian_events.3.d:0 "シベリアに大量にいる毛皮を持つ動物たちは紛れもなく貴重な発見であり、それは我が国のみならず、我が国の貧しい農奴や都市民にも言えることだ。冒険心を持つ者達にとって、毛皮狩りや交易探検そして開拓の最前線基地を越えた遠くへの旅はますます普通のこととなっている。彼らが戻るとき、彼らは[russian_center_of_trade.GetName]の幸運な帰還というに見合う貴重な川獺やリスの毛皮を携えている。\n時に富を求めるものはより遠くへと行きたがる。我等の「交易商人」の殺人的な行為は[siberian_frontier_province.GetName]の部族の者を激怒させ、その土地への植民を危険なものとしている。"
  siberian_events.3.a:0 "これについてできることはない。"
  siberian_events.3.b:0 "領民を統治する必要がある。"
  siberian_events.4.t:0 "コサックの探検"
