Save/Update files

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -5,8 +5,8 @@
  bav_expand_in_bavaria_desc:0 "バイエルンは統一されたとはいえ、オーストリアやボヘミアに単独で立ち向かうことはできない。我々は中核州となる地域を拡張し、我々よりも弱い近隣国を支配の下に置かなくてはならない。"
  emp_bav_union_with_palatinate_title:0 "ヴィッテルスバッハ家の統一"
  emp_bav_union_with_palatinate_desc:0 "ヴィッテルスバッハ家の分家の数々はバイエルンの境界の向こうにまで及んでいる。その一つはバイエルン・ヴィッテルスバッハ家に疑いなくふさわしい地位である選帝侯位を得ることにより、長きにわたってライン河地方とオーバープファルツに根を張ってきた。この親類一同を再結集して、（皇帝の同意をとりつけると少し説得することで）彼ら自身のために選帝侯位を要求するのはまったく正当なことだ。"
- emp_bav_union_with_palatinate_effect_tooltip:0 "If we complete this mission by enforcing a Personal Union on the §YPalatinate§!:"
- emp_bav_union_with_palatinate_effect_tooltip2:0 "The §YEmperor§! of the §YHoly Roman Empire§! shall decide whether the §YPalatinate§!'s Electorate should be transferred to §Y[Root.GetUsableName]§!."
+ emp_bav_union_with_palatinate_effect_tooltip:0 "このミッションを達成すると§Yプファルツ§!に同君連合を強要できます"
+ emp_bav_union_with_palatinate_effect_tooltip2:0 "§Y神聖ローマ皇帝§!はプファルツ選帝公領を§Y[Root.GetUsableName]§!に返還するか決める。"
  emp_bav_union_with_palatinate_effect_tooltip3:0 "\nIf a Personal Union is not enforced on the §YPalatinate§!:"
  emp_bav_be_good_at_religion_title:0 "信仰の案内"
  emp_bav_be_good_at_religion_desc:0 "宗教的見解の相違が他の国々を悩ませているが、バイエルンにこのようなものが根付くのを許すべきではない。我々は信仰心と敬虔な行いこそが我が国の礎であり続けるよう配慮しなければならない。"
@@ -16,7 +16,7 @@
  emp_bav_center_of_counter_reformation_tooltip:0 "隣接した国が§Y異端§!の宗派を信仰していない。"
  emp_bav_center_of_counter_reformation_tooltip2:0 "§Y宗教改革§!が始まってから§Y50§!年以上経っている。"
  emp_bav_conquer_tirol_title:0 "チロルの請求"
- emp_bav_conquer_tirol_desc:0 "チロル州はかつてバイエルン公国に属しており、その請求は1369年に取り下げたに過ぎない。我々はこの請求を再開し、ハプスブルク家によるこの州の侵略を終わらせなければならない。"
+ emp_bav_conquer_tirol_desc:0 "チロル州はかつてバイエルン公国に属しており、我々はその地の請求を1369年に中断したに過ぎない。我々はこの請求を再開し、ハプスブルク家によるこの州の侵略を終わらせなければならない。"
  emp_bav_union_with_austria_title:0 "オーストリアとの連合"
  emp_bav_union_with_austria_desc:0 "The upstart Habsburgs have built themselves a large territorial empire in Austria, a region which once belonged to the Dukes of Bavaria. Even though this was many centuries ago, many Bavarians have never fully contented themselves with living in Austria's shadow, and would gladly take the chance to turn the tables on them, should the opportunity arise."
  emp_bav_italian_sun_title:0 "イタリアへの拡大"
@@ -1511,7 +1511,7 @@
  emp_swi_imperial_status_desc:0 "Switzerland has had a difficult relationship with the Holy Roman Emperors. We must either negotiate a strong position for ourselves within the Empire or find a safe route to leave."
  emp_swi_swabia_title:0 "Expand the Confederacy"
  emp_swi_swabia_desc:0 "Swabia is divided and vulnerable, ripe for conquest by the great Imperial powers. We should bring Swabia into the protective embrace of the Confederacy."
- emp_swi_swiss_guard_title:0 "Expand the Swiss Guard"
+ emp_swi_swiss_guard_title:0 "スイス衛兵の拡大"
  emp_swi_swiss_guard_desc:0 "The Pope's Swiss Guards are a point of great pride in our nation. We should improve our relationship with the Holy Father and seek to aid him in battle."
  emp_swi_mercenaries_title:0 "傭兵団"
  emp_swi_mercenaries_desc:0 "Swiss mercenaries have fought for near every nation in Europe. We should investigate how these experienced soldiers could better serve their own nation."
