--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -722,7 +722,7 @@
  flavor_eng.EVTOPTA9124:0 "議会に対抗する"
  flavor_eng.EVTOPTB9124:0 "議会に屈服する"
  flavor_eng.EVTNAME9127:0 "航海法"
- flavor_eng.EVTDESC9127:0 "Cromwell, Lord Protector of the English Commonwealth, promulgated the Act of Navigation in 1651. It was mostly directed against the Dutch carrier trade and provided that all goods shipped to and from England was to be transported on English ships, while also confirming the colonial exclusive policy. The Act directly caused the first English-Dutch war of 1652-1654 and the second in 1665-1667. At the Peace of Breda (1667), New Amsterdam (New York) was exchanged for Suriname (Dutch Guiana) and the Act slightly modified. It nevertheless contributed to the enormous growth in English naval and colonial trade."
+ flavor_eng.EVTDESC9127:0 "クロムウェルは、英連邦の護国卿であり、1651年に航海法を公布した。それは主にオランダの運送貿易に対して向けられたものであり、イングランドに出入りするすべての商品は英国船で輸送され、同時に植民地でもこの排他的な方針が承認された。この法律は、最初は1652－1654年に、続いて1665－1667年に英国・オランダ戦争を直接的に引き起こした。ブレダの和約（1667年）では、ニューアムステルダム（ニューヨーク）がスリナム（オランダ領ギアナ）と交換され、航海法はわずかに修正された。にもかかわらず航海法は、英国海軍および植民地貿易の巨大な成長に貢献したのだった。"
  flavor_eng.EVTOPTA9127:0 "制定する。"
  flavor_eng.EVTOPTB9127:0 "現在の政策で完璧だ。"
  flavor_eng.EVTNAME9129:0 "信仰寛容令と審査法"
@@ -1395,7 +1395,7 @@
  flavor_spa.EVTDESC3158:0 "1557年、スペイン王として最初の年に、フェリペ2世は国の破産の宣言を余儀なくされた。スペインは長年にわたり税の基盤を低下させていたが、さらに悪いことに、アメリカ大陸の銀と金の流入による価格の変動を制御できなかった。すべての費用が不安定に変動するため、スペインの大臣が返済を予測することは不可能であった。支出は計画された予算に基づいていたが、歳入は非常に不規則であったため、スペインの支出は実際よりも多くなり、したがって、1557年と1596年の大規模な破産へとつながった。"
  flavor_spa.EVTOPTA3158:0 "我々は歴史から学ばなかったのか？"
  flavor_spa.EVTNAME3160:0 "モリスコ追放"
- flavor_spa.EVTDESC3160:0 "Southern parts of Spain were inhabited mostly by Moriscos - Muslims who had converted to Catholicism under the threat of expulsion by Ferdinand and Isabella following the Reconquista. Many, however, continued secretly to practice Islam, and at times provided the Ottoman Turks with information facilitating Turkish raids on the Spanish coast. Persecuted by the Spanish Inquisition and subjected to restrictive legislation, the Moriscos rose in a bloody rebellion (1568-71), which Philip II put down with the help of Don John of Austria. The Moriscos prospered in spite of persecutions and furthered Spanish agriculture, trade, and industries. However, in 1609 Philip III, influenced by the Duke of Lerma, decreed their expulsion for both religious and political reasons, and the Moriscos to leave the Kingdom, only allowing them to keep what they could carry. Everything else was confiscated. The expulsions came to hurt the Spanish economy for generations."
+ flavor_spa.EVTDESC3160:0 "スペイン南部には、モリスコと呼ばれる、レコンキスタに続いて、フェルディナンドとイサベルの追放の脅威のもとにカトリックに改宗したイスラム教徒たちが多く居住していた。しかし、多くは秘密裏にイスラムの教えを実践し、時にはオスマン帝国のトルコ人たちにスペインの海岸でトルコの襲撃を促進する情報を提供していた。スペインの異端審問で迫害され、制限された法律の対象となったモリスコは、フェリペ2世がドン・フアン・デ・アウストリアの助けを借りて鎮圧した血みどろの反乱（1568〜71）を起こした。モリスコは迫害にもかかわらず繁栄し、スペインの農業、貿易、産業を発展させた。しかし、1609年、フェリペ3世は、レルマ公の影響を受けて、宗教的、政治的理由から追放を宣言し、モリスコに王国から離れるよう命じた。すべてが没収された。追放は、何世代にもわたってスペイン経済を傷つけることとなった。"
  flavor_spa.EVTOPTA3160:0 "彼らを追放する！"
  flavor_spa.EVTOPTB3160:0 "彼らが経済のために必要とされるようにしよう"
  flavor_spa.EVTTOOLTIP3160:0 "モリスコは[This.GetName]に向かっている。"
@@ -1808,7 +1808,7 @@
  flavor_tur.EVTOPTA3358:1 "ティマール制を拡大する。"
  flavor_tur.EVTOPTB3358:1 "ウラマーだけを残す。"
  flavor_tur.EVTNAME3359:0 "ヴェネツィア－トルコ間の紛争"
- flavor_tur.EVTDESC3359:0 "Since the capture of Constantinople by the Turks on May 29th, 1453, Venice had seen its commercial positions in the Black Sea deteriorate. Numerous wars had been fought between 1456 and 1490, pitching the Republic against the Ottomans, with the consequence of Venice losing more pieces of her commercial empire (inherited from the 4th Crusade in 1204) in the Aegean Sea and in Greece (Athens in 1460, Negroponte in 1470). A war erupted again in 1499, Venice losing fortresses in Morea such as Modon, Coron and Navarrin."
+ flavor_tur.EVTDESC3359:0 "1453年5月29日の、トルコ人によるコンスタンティノープルの奪取以来、ヴェネツィアは黒海における商業的地位の悪化を見てきた。1456年から1490年にかけて共和国がオスマンを倒そうと数多くの戦争が起こり、ヴェネツィアはエーゲ海とギリシャ（アテネは1460年、ネグロポンテは1470年）の商業帝国（1204年の第4回十字軍から継承）の多くを失った。戦争は1499年に再び勃発し、ヴェネツィアはモレアスのモドン、コロン、ナヴァリンなどの要塞を失った。"
  flavor_tur.EVTOPTA3359:0 "補償の議論さえ拒否する。"
  flavor_tur.EVTOPTB3359:0 "補償としてアレクサンドリアを与える。"
  flavor_tur.EVTNAME3360:0 "トルコ・ペルシア間の紛争：シーア派反乱軍"
@@ -1843,7 +1843,7 @@
  flavor_tur.EVTOPTA3370:0 "ジェラーリーとシーア派を鎮圧する。"
  flavor_tur.EVTOPTB3370:0 "彼らの要求に耳を傾ける。"
  flavor_tur.EVTNAME3371:1 "巡礼の守護者"
- flavor_tur.EVTDESC3371:1 "Following the spectacularly successful Mamluk campaign, Sultan Selim I accepted the homage of the Sharif of Mecca and adopted the title "Servant of the Two Holy Places" (Khadim al-Haramayn), pledging to protect the security of the pilgrims traveling to Mecca and Medina each year for the hajj rituals required by the Muslim faith. Defense of the pilgrimage routes henceforth became one of the most significant sources of legitimacy and prestige for the Ottoman dynasty, as it was a role of immeasurable importance for all Muslims which no other dynasty could claim to fulfill."
+ flavor_tur.EVTDESC3371:1 "劇的な成功を収めたマムルーク遠征に続いて、セリム1世はメッカのシャリフの忠誠の誓いを受け入れ、「二聖モスクの護持者」（Khadim al-Haramayn）の称号を採用して、イスラム教徒の信仰のより求められるハッジの儀式のために、毎年メッカとメディナに旅行する巡礼者の安全を守ることを約束した。以後、巡礼路の防衛は、他の王朝が果たせなかった、すべてのイスラム教徒にとって計り知れない重要な役割を果たしたことで、オスマン王朝の最も重要な正統性と威信の源泉の一つとなった。"
  flavor_tur.EVTOPTA3371:1 "二聖モスクの護持者の称号を引き受ける"
  flavor_tur.EVTNAME3373:0 "マムルークの蜂起"
  flavor_tur.EVTDESC3373:1 "新たに征服されたマムルーク・シリアの不忠なる総督、ジャーンビルディー・アル＝ガザーリーは自身の指導力のもとにマムルークを再建することを企図してオスマンに対する反乱を立ち上げた。"
@@ -4516,7 +4516,7 @@
  hre_event.4.a:1 "A grave matter."
  hre_event.4.a.tt:0 "§Yイタリア王国§!のすべての地域が1490年までに帝国の一部であり、1550年までそこにとどまらない限り、この州は帝国を離れる可能性が高い州です。"
  hre_event.4.b:0 "興味深い。"
- hre_event.4.b.tt:0 "Unless the following areas are entirely part of the Empire before 1490 and stay there until 1550 all Italian states will be given a choice to leave the Empire:\n§YPiedmont§!\n§YLombardy§!\n§YEmilia-Romagna§!\n§YLiguria§!\n§YTuscany§!\n§YCentral Italy§!\n§YVenetia§! (except Venice)."
+ hre_event.4.b.tt:0 "以下の地域が1490年までに完全に帝国の一部であり、1550年までとどまらない限り、全てのイタリア国家は帝国を離れる選択肢が与えられます：\n§Yピエモンテ§!\n§Yロンバルディア§!\n§Yエミリア＝ロマーニャ§!\n§Yリグーリア§!\n§Yトスカーナ§!\n§Y中央イタリア§!\n§Yヴェネツィア§!（ヴェネツィアを除く）"
  hre_event.5.t:0 "[From.GetName]による帝国の打破"
  hre_event.5.d:0 "神聖ローマ帝国は、正当な我々の土地から切り取られた[From.GetName]という新しい国家の形成によって崩壊した。この発展を止めることができなかったことは、帝国に残っている土地に対する我々の権威を破壊してしまった。"
  hre_event.5.a:0 "恩知らずの家臣より悪いものはない。"
