--- a/source/localisation/hints_l_english.yml
+++ b/source/localisation/hints_l_english.yml
@@ -9,7 +9,7 @@
  HINT_DISABLETHIS_TIP:0 "このヒントを自動的に再表示しない"
  HINT_TURNOFF_TIP:0 "これはヒントを隠すものです。オプションメニューから再度有効にすることができます。"
  HINT_BANNER_TEXT:0 "詳しく教えてくれ…"
- HINT_MODE_BUTTON:1 "§YClick-for-Hint Mode§!"
+ HINT_MODE_BUTTON:1 "§Yクリックしてヒントモード§!"
  HINT_MODE_BUTTON_DESC:0 "あなたはより多くの情報を得るため、ゲーム内のボタンやアイコンをクリックすることができます。"
  HINT_INTRO_TILE:0 "ヒント"
  HINT_INTRO_TEXT:0 "ヒントは、ゲームの中の物事に関して情報を示し、あなたを助けることを目的としています。右上にあるクリックしてヒントボタンを押すと、ヒントモードが起動します。一度ヒントモードになると、大半のアイコンは青色になります。それらを押すことで、それらに関する情報が得られます。最小化・最大化ボタンを押すことで、このインターフェースを最小化あるいは最大化できます。"
@@ -20,7 +20,7 @@
  HINT_LOSESTABILITY_TITLE:0 "安定度の減少"
  HINT_LOSESTABILITY_TEXT:0 "安定度は、イベントや開戦事由なしの宣戦布告、王室間の婚姻の破棄、戦闘による君主や後継者の死亡などにより減少します。"
  HINT_DUCATS_TITLE:0 "ダカット"
- HINT_DUCATS_TEXT:0 "Ducats are the primary resource in the game. They are used to purchase everything from new ships, to paying advisors' salaries, to recruiting armies."
+ HINT_DUCATS_TEXT:0 "ダカットは本ゲームの主要な資源の一つです。これは新しい船舶の購入費用から、徴兵や顧問の給与などさまざまなものに使用されます。"
  HINT_MONARCHPOINTS_TITLE:0 "君主点"
  HINT_MONARCHPOINTS_TEXT:1 "君主点は本ゲームの中で最も重要な資源の一つです。これは新しい技術やアイデアなど、多くをアンロックするために使用されます。毎月獲得する君主点はプレイヤーの君主としての能力に依存し、顧問の雇用により増加させることができます。君主点は、統治力、外交力、軍事力の3つのカテゴリに分類されます。"
  HINT_MANPOWER_TITLE:0 "人的資源"
@@ -78,7 +78,7 @@
  HINT_ADMINPOWER_TITLE:0 "統治力"
  HINT_ADMINPOWER_TEXT:0 "統治力は、おそらくゲームの中でもっとも重要な資源です。主な用途は、州を中核州にしたり、統治技術を高めたり、新しいアイデアを獲得することです"
  HINT_DIPLOPOWER_TITLE:0 "外交力"
- HINT_DIPLOPOWER_TEXT:0 "Diplomatic Power is one of the primary resources in the game. Its primary uses are to change culture in provinces and to increase Diplomatic Technology or unlock new Ideas."
+ HINT_DIPLOPOWER_TEXT:0 "外交力は、ゲームの中での主要な資源の一つです。主な用途は、州の文化を変更したり、外交技術を高めたり、新しいアイデアを獲得することです"
  HINT_MILPOWER_TITLE:0 "軍事力"
  HINT_MILPOWER_TEXT:0 "軍事力は、ゲームの中での主要な資源の一つです。主な用途は、軍事技術を高める指導者を雇ったり、新しいアイデアを獲得することです"
  HINT_CHANGEGOV_TITLE:0 "政治体制の変更"
@@ -110,7 +110,7 @@
  HINT_DIPREPUTATION_TITLE:0 "外交評判"
  HINT_DIPREPUTATION_TEXT:0 "外交評判は、特定の外交行動を実行する上でより大きな成功を収めることができる要素です。外交的な属国の併合は、数年かかる過程であり、外交評判を減少させます。外交評判はまた、他国が外交提案を受け入れる可能性も高めます。"
  HINT_RELIGION_TITLE:0 "宗教"
- HINT_RELIGION_TEXT:0 "A major cause of division, other than cultural differences, are religious differences. A Catholic country, for example, will consider other countries that are Protestant, Reformed, Coptic or Orthodox as heretics, while it would consider other religions to be heathens. All the provinces in your country affect your Religious Unity. You can convert provinces to your religion with a Missionary."
+ HINT_RELIGION_TEXT:0 "文化の違いの他に、宗教の違いも不和の原因となります。例えば、カトリック教国はプロテスタント、改革派、コプト正教会や正教会の国々を異端視し、他の宗教を異教とみなすことでしょう。国家内の全ての州の宗教が国家の宗教統一度に影響を与えます。宣教師を送ることで州を改宗させることができます。"
  HINT_RIVAL_TITLE:0 "ライバル"
  HINT_RIVAL_TEXT:0 "各国は最大3カ国までライバルを指定できます。ライバルを指定すると、指定された国との関係が悪化しますが、ライバル国の敵国との関係が改善することでしょう。ライバル国家の指定は、戦争する理由を与える任務やイベントの発生確率をお互いに上昇させます。ライバル国に対しては、禁輸にコストがかからなくなり、和平交渉時にかかる要求コストが低減されます。また、ライバル国を打ち負かすことで戦力投射が得られます。一度指定するとライバルは25年間継続し、その後は100の外交力を使ってライバルを変更できます。"
  HINT_ADMTECH_TITLE:0 "統治技術"
