--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -65,7 +65,7 @@
  MODIFIER_BACKROW_ARTILLERY_DAMAGE:0 "後列からの砲兵損害"
  MODIFIER_MONTHLY_MILITARIZED_SOCIETY:0 "国家の軍事化"
  MODIFIER_REINFORCE_COST:0 "補充コスト"
- MODIFIER_ENFORCE_RELIGION_COST:1 "戦争を通じての宗教改宗のコスト"
+ MODIFIER_ENFORCE_RELIGION_COST:1 "戦争での強制改宗コスト"
  MODIFIER_AMOUNT_OF_BANNERS:0 "有効な満州八旗"
  MODIFIER_LOCAL_AMOUNT_OF_BANNERS:0 "有効な満州八旗"
  MODIFIER_CAV_TO_INF_RATIO:0 "騎兵と歩兵の比率"
