--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -1092,7 +1092,7 @@
  PROV_ADJ1102:0 "モーリシャス"
  PROV_ADJ1103:0 "イル・ブルボン"
  PROV_ADJ1104:0 "エイリークスフィヨルド"
- PROV_ADJ1105:0 "ヴェストリビュッグズ"
+ PROV_ADJ1105:0 "ヴェストブィグデン"
  PROV_ADJ1106:0 "ファンガレイ"
  PROV_ADJ1107:0 "タラナキ"
  PROV_ADJ1108:0 "タウランガ"
