--- a/source/localisation/womeninhistory_l_english.yml
+++ b/source/localisation/womeninhistory_l_english.yml
@@ -150,7 +150,7 @@
  women_history_events.36.b:0 "彼女を顧問にする方が良いだろう。"
  women_history_events.36.c:0 "彼女には将軍が一番似合っている。"
  women_history_events.37.t:0 "マンドゥフイ・ハトゥン"
- women_history_events.37.d:0 "The spy and agent of Ming China Eslem killed Mandukhai Khatun's first husband Manduul Khan and the throne was left without an heir. She had the support and loyalty of General Unubold despite rejecting his marriage offer when she adopted Batmunkh, a seven-year-old orphan and direct descendant of Genghis Khan. He was proclaimed Dayan Khan and Mandukhai, with command over the Mongols, defeated the Oirats. The Western Mongols was punished for their constant civil wars by forcing them to follow five codes: Crests of helmets must not exceed two fingers long - Eat meat without a knife - Do not call your Ger an Ordon (Palace) - Do not refer to airag as tsegee - Sit upon your knees before khans."
+ women_history_events.37.d:0 "明朝のスパイであり、密使であったイスマイルはマンドゥフイ・ハトゥンの最初の夫であったマンドゥールン・ハーンを殺害し、後継者のいない王位が残された。チンギス・カンの直系の子孫で親のいない7歳のバト・モンケを採用したとき、彼女は求婚の申し出を拒否したにもかかわらず、ウネ・ボラト将軍の支持と忠誠を保持していた。彼はダヤン・ハーンを宣言し、マンドゥフイと共にモンゴルを率い、オイラトを破った。西モンゴル人は、内戦への罰として5つの規則に従うよう強制された：兜の紋章は2本の指より長くしてはならない－ナイフを使わず肉を食べること－あなたのゲルをオルド（宮殿）と呼んではならない－アイラグをツェゲーと呼んではならない－ハンの前で膝を屈すること。"
  women_history_events.37.a:0 "将軍として彼女が必要だ！"
  women_history_events.37.b:0 "お願いだ、我々を統治してください！"
  women_history_events.37.c:0 "助言をくれ！"
