--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -78,17 +78,17 @@
  NO_INTEGREATION_PROGRESS_AT_WAR:0 "両国の統合を進めるためには平時である必要があります。"
  NO_ANNEX_PROGRESS_AT_WAR:0 "外交併合を進めるためには平時である必要があります。"
  NO_ANNEX_PROGRESS_WHILE_CAPITAL_TAKEN:0 "属国が首都を保持していない間は併合が進行しません。"
- NO_ANNEX_PROGRESS_LIBERTY:0 "They must have less than §Y$LIMIT$§! Liberty desire for annexation to progress, but currently have their liberty desire is §R$AMOUNT$§!.\n"
+ NO_ANNEX_PROGRESS_LIBERTY:0 "彼らの独立欲求が高すぎるため、併合が進みません。併合のためには独立欲求が§Y$LIMIT$§!未満である必要がありますが、現在の独立欲求の値は§R$AMOUNT$§!です。\n"
  ALL_CORES_AND_CLAIMS:0 "全ての中核州と請求権を持つ州"
- RIVAL_BENEFITS:1 "§Y$WHO$§! is our Rival, and against them we have the following benefits:\n"
+ RIVAL_BENEFITS:1 "§Y$WHO$§!は我々のライバルであり、彼らに対し我が国は以下のボーナスを得る：\n"
  RIVAL_DIPLO_ALLY:0 "彼らの敵と同盟を結べる可能性が高い。\n"
- RIVAL_BENEFITS_NONE:1 "Against a rival we have the following benefits:\n"
+ RIVAL_BENEFITS_NONE:1 "ライバルに対して、我が国は以下のボーナスを得る：\n"
  RIVAL_BENEFITS_TRADE:0 "禁輸中の交易効率ペナルティがない。\n"
  RIVAL_PRESTIGE:0 "戦闘に勝利した時の威信の上昇$VAL$。\n"
  RIVAL_DIP_POWER:0 "和平交渉で州を要求するための£dip£外交君主点が$VAL$になる。\n"
  RIVAL_SPY:0 "諜報網の構築の速度が$VAL$増加する。\n"
- BENEFIT_FOR_EMPEROR:1 "Emperor gets:\n$MODIFIER$"
- BENEFIT_FOR_MEMBER:2 "Princes & Free Cities get:\n$MODIFIER$"
+ BENEFIT_FOR_EMPEROR:1 "皇帝が以下を得る：\n$MODIFIER$"
+ BENEFIT_FOR_MEMBER:2 "加盟国が以下を得る：\n$MODIFIER$"
  DIPIRO_SUPPORTING_INDEPENDENCE:0 "§Y$NAME$§!の独立を支援しています。"
  DIPIRO_INDEPENDENCE_SUPPORTED:0 "§Y$NAME$§!による独立の支援を受けています。"
  DIPIRO_ALLIED_WITH:0 "§Y$NAME$§!と同盟を結んでいます。"
@@ -168,7 +168,7 @@
  SELECT_RIVAL_COST_DESC:0 "\n新しいライバルを指定するには§Y$VAL$§W£dip£のコストがかかります。"
  CLICK_TO_SELECT_RIVAL:0 "\nここをクリックし、リストからライバルに指定する国を選びます。"
  CLICK_NO_RIVAL_SELECTED:0 "ライバルが選択されていません。"
- CLICK_CHANGE_RIVAL:0 "\nライバルを変更します。"
+ CLICK_CHANGE_RIVAL:0 "\nライバルに変更します。"
  CLICK_SET_RIVAL:0 "\nライバルを設定します。"
  RIVAL_REMOVE_NOT_ENOUGH_POWER:0 "ライバル指定解除に必要な§Y$VAL$§W£dip£がありません。"
  ENFORCEPEACETITLE:0 "和平を強制"
